[package]
name = "cacheium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5"
smallvec = "1.8.0"

tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.17.1"
futures-util = "0.3" 
tracing = "0.1"
lazy_static = "1.4"

serde = { version = "1.0", features = ["derive"] }
json = { version = "1.0", package = "serde_json" }

bs58 = "0.4"
base64 = "0.13"
zstd = "0.11"
prometheus = { version = "0.13", default-features = false, features = ["process"] }
lru = "0.7.5"

